force-app/main/default/objects/SiteUserProfile__c/SiteUserProfile__c.object-meta.xml
<CustomObject>
    <label>SiteUserProfile</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SiteUserProfiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>