force-app/main/default/objects/SiteUserProfile__c/fields/Access_Business_Section__c.field-meta.xml
<CustomField>
    <fullName>Access_Business_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access Business Section</label>
    <type>Checkbox</type>
</CustomField>